# system-behavior-analyzer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  WINDOWS_SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/aurora/: __init__.py  __main__.py
src/aurora/actions/: base.py  registry.py
src/aurora/actions/builtin/: _simulated.py  cleanup_temp.py  create_restore_point.py  disable_startup_app.py  network_reset.py  optimize_background_apps.py  run_dism.py  run_sfc.py  set_power_plan.py  stop_service.py
src/aurora/advisors/: presets.py  rules_engine.py
src/aurora/ai/: chat_engine.py  memory_store.py  prompts.py  safety.py  tools.py
src/aurora/cli/: app.py
src/aurora/cli/commands/: fix.py  gui.py  profile.py  report.py  scan.py
src/aurora/core/: async_utils.py  config.py  constants.py  errors.py  i18n.py  logging.py  paths.py  permissions.py
src/aurora/domain/: audit.py  models.py  profiles.py  risk.py
src/aurora/gui/: app.py  main_window.py  navigation.py  theme.py  tray.py
src/aurora/gui/pages/: booster.py  chat.py  dashboard.py  logs.py  repair.py  scan.py  services.py  settings.py  startup.py  storage.py  tasks.py
src/aurora/gui/widgets/: cards.py  charts.py  dialogs.py  tables.py  toasts.py
src/aurora/scanners/: base.py  drivers_scanner.py  network_scanner.py  services_scanner.py  startup_scanner.py  storage_scanner.py  system_scanner.py  tasks_scanner.py
src/aurora/storage/: parquet.py  repositories.py  sqlite.py
src/aurora/telemetry/: events.py  metrics.py  privacy.py
src/sba/: __main__.py  config.py  logging_config.py
src/sba/cli/: app.py  collect_cmd.py  gui_cmd.py  ml_cmd.py
src/sba/collectors/: system_metrics.py
src/sba/guardian_gui/: __init__.py  __main__.py  app.py  main_window.py  theme.py  ui_fx.py
src/sba/guardian_gui/core/: session.py
src/sba/guardian_gui/pages/: __init__.py  anomalies.py  dashboard.py  processes.py
src/sba/guardian_gui/workers/: system_worker.py
src/sba/gui/: __init__.py  app.py  main_window.py  state.py  theme.py
src/sba/gui/pages/: __init__.py  anomalies.py  assistant.py  dashboard.py  settings.py
src/sba/gui/widgets/: metric_chart.py
src/sba/gui/workers/: train.py
src/sba/ml/: detect.py  train.py
src/sba/storage/: parquet_store.py  sqlite_store.py
tests/: test_aurora_actions.py  test_aurora_actions_audit.py  test_aurora_cli.py  test_aurora_commands.py  test_aurora_db.py  test_aurora_gui_entrypoints.py  test_aurora_import.py  test_aurora_scan.py  test_smoke.py
