[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-behavior-analyzer"
version = "0.1.0"
description = "Collect system metrics and detect anomalies."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Gerhard Visser"}]

dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "psutil>=5.9",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.6",
  "matplotlib>=3.8",
]

dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.8",
]

[project.scripts]
sba = "sba.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
