[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "system-behavior-analyzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "annotated-types==0.7.0",
  "click==8.3.1",
  "colorama==0.4.6",
  "iniconfig==2.3.0",
  "joblib==1.5.3",
  "librt==0.7.8",
  "markdown-it-py==4.0.0",
  "mdurl==0.1.2",
  "mypy==1.19.1",
  "mypy_extensions==1.1.0",
  "numpy==2.4.2",
  "packaging==26.0",
  "pandas==3.0.0",
  "pathspec==1.0.4",
  "pluggy==1.6.0",
  "psutil==7.2.2",
  "pyarrow==23.0.0",
  "pydantic==2.12.5",
  "pydantic_core==2.41.5",
  "Pygments==2.19.2",
  "pytest==9.0.2",
  "python-dateutil==2.9.0.post0",
  "PyYAML==6.0.3",
  "rich==14.3.1",
  "ruff==0.14.14",
  "scikit-learn==1.8.0",
  "scipy==1.17.0",
  "shellingham==1.5.4",
  "six==1.17.0",
  "threadpoolctl==3.6.0",
  "typer==0.21.1",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "tzdata==2025.3",
]


[project.scripts]
sba = "sba.cli.app:main"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
