[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "system-behavior-analyzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  # runtime
  "psutil>=5.9",
  "pandas>=2.1",
  "pyarrow>=14",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "python-dateutil>=2.8",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.8",
]
gui = [
  "PySide6>=6.6",
]


[project.scripts]
sba = "sba.cli.app:main"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
